Created with Colab

--- a/colabNotebook.ipynb
+++ b/colabNotebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOQmbFcO2IOAXTWbz0/yC9G",
+      "authorship_tag": "ABX9TyNEPVxo1RVIsNJhHPAHpLaR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "hsWMw_AMKAOm"
       },
@@ -48,7 +48,8 @@
         "from keras.models import Sequential\n",
         "from keras.layers import Dense, Dropout, Flatten\n",
         "from keras.layers import Conv2D, MaxPooling2D\n",
-        "from keras import backend as K"
+        "from keras import backend as K\n",
+        "from google.colab import files"
       ]
     },
     {
@@ -66,10 +67,23 @@
         "(x_train,y_train), (x_test, y_test) = mnist.load_data()"
       ],
       "metadata": {
-        "id": "45dYhHLbKoMG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "45dYhHLbKoMG",
+        "outputId": "272d197f-e235-4901-8948-b4d15f525701"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "\u001b[1m11490434/11490434\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -100,7 +114,7 @@
       "metadata": {
         "id": "t0Si3PtbK2JF"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -122,7 +136,7 @@
       "metadata": {
         "id": "iWTcf0lMMLqo"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -150,10 +164,198 @@
         "model.add(Dense(num_classes, activation='softmax'))"
       ],
       "metadata": {
-        "id": "7Un5PRWVMkyF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7Un5PRWVMkyF",
+        "outputId": "df1863fe-6c9a-4313-b211-c71369b6418e"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/keras/src/layers/convolutional/base_conv.py:113: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Compiling the model"
+      ],
+      "metadata": {
+        "id": "mUlWUlKEOi6K"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(loss=keras.losses.categorical_crossentropy,\n",
+        "              optimizer = keras.optimizers.Adadelta(),\n",
+        "              metrics=['accuracy'])"
+      ],
+      "metadata": {
+        "id": "N1yHecL0Ol84"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Fitting the model on training data"
+      ],
+      "metadata": {
+        "id": "9ss7qzXROyUH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.fit(x_train, y_train,\n",
+        "          batch_size = 128,\n",
+        "          epochs = 12,\n",
+        "          verbose = 1,\n",
+        "          validation_data = (x_test, y_test))"
+      ],
+      "metadata": {
+        "id": "EYbKbSj5O0lF",
+        "outputId": "88705219-1b57-4144-efb7-27d975d6a104",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/12\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m168s\u001b[0m 352ms/step - accuracy: 0.1068 - loss: 2.2915 - val_accuracy: 0.2504 - val_loss: 2.2474\n",
+            "Epoch 2/12\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m156s\u001b[0m 332ms/step - accuracy: 0.2015 - loss: 2.2421 - val_accuracy: 0.3749 - val_loss: 2.1829\n",
+            "Epoch 3/12\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m159s\u001b[0m 340ms/step - accuracy: 0.2852 - loss: 2.1806 - val_accuracy: 0.4753 - val_loss: 2.0961\n",
+            "Epoch 4/12\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m199s\u001b[0m 333ms/step - accuracy: 0.3788 - loss: 2.0939 - val_accuracy: 0.5971 - val_loss: 1.9780\n",
+            "Epoch 5/12\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m158s\u001b[0m 337ms/step - accuracy: 0.4615 - loss: 1.9784 - val_accuracy: 0.7073 - val_loss: 1.8196\n",
+            "Epoch 6/12\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m205s\u001b[0m 344ms/step - accuracy: 0.5332 - loss: 1.8326 - val_accuracy: 0.7582 - val_loss: 1.6224\n",
+            "Epoch 7/12\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m198s\u001b[0m 336ms/step - accuracy: 0.5912 - loss: 1.6556 - val_accuracy: 0.7860 - val_loss: 1.4064\n",
+            "Epoch 8/12\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m161s\u001b[0m 344ms/step - accuracy: 0.6323 - loss: 1.4733 - val_accuracy: 0.8000 - val_loss: 1.2001\n",
+            "Epoch 9/12\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m200s\u001b[0m 340ms/step - accuracy: 0.6587 - loss: 1.3063 - val_accuracy: 0.8141 - val_loss: 1.0281\n",
+            "Epoch 10/12\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m157s\u001b[0m 335ms/step - accuracy: 0.6822 - loss: 1.1730 - val_accuracy: 0.8257 - val_loss: 0.8942\n",
+            "Epoch 11/12\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m158s\u001b[0m 337ms/step - accuracy: 0.7010 - loss: 1.0678 - val_accuracy: 0.8325 - val_loss: 0.7936\n",
+            "Epoch 12/12\n",
+            "\u001b[1m469/469\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m204s\u001b[0m 342ms/step - accuracy: 0.7224 - loss: 0.9787 - val_accuracy: 0.8419 - val_loss: 0.7170\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.history.History at 0x7ecea5f66e70>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.save('trained_model.keras')\n",
+        "files.download('trained_model.keras')"
+      ],
+      "metadata": {
+        "id": "oHi5Y8hkYoms",
+        "outputId": "10d648f1-8edc-4881-a559-bab7c9630150",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_a570110e-3b79-41fa-ae83-bfbf557b64bd\", \"trained_model.keras\", 14437713)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     }
   ]
 }
